--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,7 +50,7 @@
                   <button  class="btn btn-warning" (click)="getTrailer(card.id)"><i class="bi bi-film"></i> Trailer</button>
               </p>
               <p class="card-text">
-                <small class="text-body-secondary">Last updated {{ updateLastUpdated(card.lastUpdatedTimestamp) }}</small>
+                <small class="text-body-secondary">Last updated : {{ updateLastUpdated(card.lastUpdatedTimestamp) }}</small>
               </p>
             </div>
           </div>
