--- a/src/app/components/details-actors/details-actors.component.scss
+++ b/src/app/components/details-actors/details-actors.component.scss
@@ -45,3 +45,57 @@
       font-size: 14px;
       font-style: italic;
     }
+
+
+    .popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    .popup-content {
+      background-color: #3a3838;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 80%;
+      overflow-y: auto;
+      text-align: center;
+    }
+    
+    .image-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
+    
+    .actor-image {
+      max-width: 200px;
+      height: auto;
+      border-radius: 8px;
+    }
+    
+    button {
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: #ff6347;
+      border: none;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    
+    button:hover {
+      background-color: #e04a34;
+    }
+    
+    strong {
+      color: #7eec18;
+    }
