--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,23 +63,38 @@
   <div class="row">
     <h1>Fan Favorites</h1>
     <hr>
-    <div class="col-md-3" *ngFor="let item of fanfavorites">
-      <div class="card h5">
-        <a [routerLink]="['/details', item.id]">
-          <img [src]="item.imageUrl" class="card-image img-fluid rounded-start" [alt]="item.title">
-        </a>
-        <div class="card-body">
-          <h5 class="card-title">{{ item.title }}</h5>
-          <p class="card-text text-body-secondary text-center"><i class="bi bi-calendar-fill"></i> {{ item.release_date }}</p>
-        </div>
-        <div class="card-footer text-center text-muted">
-          <span style="float:left"> <i class="bi bi-star-fill"></i> {{ item.vote_average }}</span>
-          <span style="float:right"><i class="bi bi-trophy-fill"></i> {{ item.vote_count }}</span>
+    <div class="d-flex justify-content-between align-items-center mb-2">
+      <button class="btn btn-outline-secondary" type="button" data-bs-target="#fanFavoritesCarousel" data-bs-slide="prev" [disabled]="isFirstSlide()">
+        <i class="bi bi-chevron-left"></i>
+      </button>
+      <div id="fanFavoritesCarousel" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-inner">
+          <div *ngFor="let item of fanfavorites; let i = index" class="carousel-item" [class.active]="i === 0">
+            <div class="row">
+              <div class="col-md-3" *ngFor="let favorite of fanfavorites.slice(i * 4, (i + 1) * 4)">
+                <div class="card h-100" *ngIf="!(isFirstSlide() && i === 0) && !(isLastSlide() && i === totalSlides - 1)">
+                  <a [routerLink]="['/details', favorite.id]">
+                    <img [src]="favorite.imageUrl" class="card-image img-fluid rounded-start" [alt]="favorite.title">
+                  </a>
+                  <div class="card-body">
+                    <h5 class="card-title">{{ favorite.title }}</h5>
+                    <p class="card-text text-body-secondary text-center"><i class="bi bi-calendar-fill"></i> {{ favorite.release_date }}</p>
+                  </div>
+                  <div class="card-footer text-center text-muted">
+                    <span style="float:left"> <i class="bi bi-star-fill"></i> {{ favorite.vote_average }}</span>
+                    <span style="float:right"><i class="bi bi-trophy-fill"></i> {{ favorite.vote_count }}</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <button class="btn btn-outline-secondary" type="button" data-bs-target="#fanFavoritesCarousel" data-bs-slide="next" [disabled]="isLastSlide()">
+        <i class="bi bi-chevron-right"></i>
+      </button>
     </div>
   </div>
-</div>
 
 
 <!--Movie Trailer -->
