--- a/src/app/components/details-actors/details-actors.component.scss
+++ b/src/app/components/details-actors/details-actors.component.scss
@@ -61,6 +61,7 @@
     
     .popup-content {
       background-color: #3a3838;
+      color: white;
       padding: 20px;
       border-radius: 8px;
       max-width: 80%;
