--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #333;
+    background-color: var(--primary-bg-color);
     color: white;
     text-align: center;
     padding: 10px 0;
