--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,28 @@
         <li class="nav-item">
           <a class="nav-link active" routerLink="/forms"><i class="bi bi-chat-dots"></i> FeedBack</a>
         </li>
+        <li class="nav-item">
+          <ng-container>
+            <label class="switch">
+              <span class="sun">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                  <g fill="#ffd43b">
+                    <circle r="5" cy="12" cx="12"></circle>
+                    <path d="M21 13h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 0 2zM4 13H3a1 1 0 0 1 0-2h1a1 1 0 0 1 0 2zM17.66 7.34a1 1 0 0 1-.66-.29 1 1 0 0 1 0-1.41l.71-.71a1 1 0 1 1 1.41 1.41l-.71.71a1 1 0 0 1-.75.29z"></path>
+                  </g>
+                </svg>
+              </span>
+              <span class="moon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                  <path fill="#ffffff" d="M223.5 32C100 32 0 132.3 0 256s100 224 223.5 224c60.6 0 115.5-24.2 155.8-63.4 5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6C238.4 391 160 312.2 160 216c0-65.8 36-123.1 89.3-153.3 6.1-3.5 9.2-10.5 7.7-17.3S249.7 33.9 242.7 33.3C236.4 32.8 230.1 32.5 223.5 32z"/>
+                </svg>
+              </span>
+              <input type="checkbox" (change)="toggleTheme()" class="input">
+              <span class="slider"></span>
+            </label>
+          </ng-container>
+          
+      </li>
       </ul>
       <div class="d-flex align-items-center" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchMovieTitle">
