--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,27 @@
 
-html, body {
-    margin: 0;
-    padding: 0;
-    background-color: rgb(32, 31, 31);
-    color: white;
-    font-size: 16px;
+html, 
+body {
+  margin: 0;
+  padding: 0;
+  --primary-bg-color: #ffffff;
+  --primary-text-color: #333;
+  --main-bg-color: #ffffff;
+  font-size: 16px;
+  background-color: var(--main-bg-color);
+  color: var(--primary-text-color);
 }
+
+.dark-mode {
+  --primary-bg-color: #222;
+  --primary-text-color: #ffffff;
+  --main-bg-color: #121212;
+}
+
+body.dark-mode {
+  background-color: var(--main-bg-color);
+  color: var(--primary-text-color);
+}
+
  * {
     outline: none;
  }
