--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid" *ngIf="movieDetails">
-  <div class="d-flex align-items-center my-4">
-    <button class="btn btn-primary me-3" (click)="goBack()">
+  <div class="d-flex flex-wrap align-items-center my-4">
+    <button class="btn btn-primary me-3 mb-2 mb-md-0" (click)="goBack()">
       Back
     </button>
     <h1 class="flex-grow-1 text-center">{{ movieDetails.title }}</h1>
   </div>
   <div class="row g-4">
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-12 mb-3 mb-lg-0">
       <div class="ratio ratio-16x9">
         <iframe
           *ngIf="selectedTrailerUrl"
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-12">
       <p class="lead">{{ movieDetails.overview }}</p>
       <div class="row g-3">
         <div class="col-md-4">
@@ -61,9 +61,8 @@
   <hr class="my-4">
 
   <div class="row g-4">
-    <div class="col-md-12">
+    <div class="col-md-12 col-12">
       <h1>Actors</h1>
-      <div class="text-center">
         <app-details-actors [limit]="5"></app-details-actors>
       </div>
       <div class="text-center mt-3">
@@ -78,7 +77,7 @@
   <hr class="my-4">
 
   <div class="row g-4">
-    <div class="col-md-6">
+    <div class="col-md-6 col-12">
       <h1>Reviews</h1>
       <div class="text-center">
         <app-details-reviews [limit]="5" (reviewsFetched)="handleReviewsFetched($event)"></app-details-reviews>
@@ -94,7 +93,7 @@
   <hr class="my-4">
 
   <div class="row g-4">
-    <div class="col-md-12">
+    <div class="col-md-12 col-12">
       <h1>Similar Movies</h1>
       <div class="text-center">
         <app-details-movies [limit]="5"></app-details-movies>
