--- a/src/app/feedback-form/feedback-form.component.html
+++ b/src/app/feedback-form/feedback-form.component.html
@@ -1,5 +1,5 @@
 <div class="feedback-container">
-    <h1 class="text-center">Feedback Form</h1>
+    <h1 class="text-center form-title">Feedback Form</h1>
     <form [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="name">Name</label>
