--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,5 +1,3 @@
-<div class="row text-center">
-    <col class="col-md-12">
-        <h1>404 Not Found</h1>
-        <h2>Sorry, the page you are looking for does not exist.</h2>
+<div class="d-flex flex-column align-items-center justify-content-center page-container" style="min-height: 80vh;">
+    <a routerLink="/home" class="btn btn-primary home-button">Go to Home</a>
 </div>
