--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -13,7 +13,8 @@
   }
   
   .container {
-    background-color: #f8f9fa;
+    background-color:  --primary-bg-color;
+    color: #90f163;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
