--- a/src/app/feedback-form/feedback-form.component.scss
+++ b/src/app/feedback-form/feedback-form.component.scss
@@ -1,3 +1,11 @@
+:host { 
+  display: block;
+  padding: 20px;
+  background-color: #f0f0f0;
+  font-family: Arial, sans-serif;
+  color: #333;
+}
+
 .feedback-container {
     max-width: 600px;
     margin: 20px auto;
@@ -7,7 +15,13 @@
     background-color: #f9f9f9;
     position: relative;
   }
-  
+   
+  .form-title {
+    font-size: 2rem;
+    margin-bottom: 20px;
+    color: #333;
+    text-align: center;
+  }
   .form-group {
     margin-bottom: 15px;
   }
@@ -49,6 +63,7 @@
   
   .popup {
     background-color: #f7f8f2;
+    color: #90f163;;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -67,8 +82,8 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #afafa9; 
-  color: white;
+  background-color: #161615; 
+  color: #90f163;
   font-size: 30px;
   line-height: 60px;
   text-align: center;
